update('complete the editor')

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+  
+    <style>
+      *{
+        box-sizing:border-box;
+      }
+    </style>
   </body>
 </html>
